--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,5 +1,4 @@
 body {
-  color: white;
   font-family: Helvetica;
   color: seashell;
   opacity: 0.9;
@@ -34,7 +33,7 @@ right: 0px;
 .Headernav nav a {
   text-decoration: underline;
   color: seashell;
-  padding: 0px 10px;
+  padding: 0px 15px;
 }
 
 /*Our Mission*/
@@ -94,6 +93,51 @@ right: 0px;
   padding: 10px;
 }
 
+#Caption1 {
+  width: 300px;
+  background-color: black;
+  position: absolute;
+  left: 293px;
+  height: 60px;
+  line-height: 0px;
+}
+
+#Caption2 {
+  width: 300px;
+  background-color: black;
+  position: absolute;
+  left: 620px;
+  height: 60px;
+  line-height: 0px;
+}
+
+#Caption3 {
+  width: 300px;
+  background-color: black;
+  position: absolute;
+  left: 943px;
+  height: 60px;
+  line-height: 0px;
+}
+
+#Caption4 {
+  width: 300px;
+  background-color: black;
+  position: absolute;
+  left: 455px;
+  height: 60px;
+  line-height: 0px;
+}
+
+#Caption5 {
+  width: 300px;
+  background-color: black;
+  position: absolute;
+  left: 783px;
+  height: 60px;
+  line-height: 0px;
+}
+
 /*Locations*/
 
 .Location {
@@ -115,6 +159,10 @@ height: 300px;
 width: 300px;
 background-color: black;
 margin: 0px 20px;
+}
+
+.LocationBlock p {
+  padding: 10px 0px;
 }
 
 /*Footer*/
